--- a/docker-compose.windows.yml
+++ b/docker-compose.windows.yml
@@ -8,12 +8,14 @@ services:
     build: .
     container_name: pcba-test-system
     ports:
-      - "9001:9001"      # Web arayüzü portu  
+      - "9002:9002"      # Web arayüzü portu  
       - "502:502"        # Modbus TCP portu
     volumes:
       - ./data:/app/data # Veritabanı persistent storage
+      - ./dash:/app/dash # Template dosyaları live reload
     environment:
       - FLASK_ENV=production
+      - FLASK_HOST=0.0.0.0
       - DATABASE_PATH=/app/data/pcba_test.db
     restart: unless-stopped
     networks:
